--- a/src/assets/defaults.css
+++ b/src/assets/defaults.css
@@ -1,3 +1,5 @@
+@import url(./fonts/stylesheet.css);
+
 *{
   padding: 0;
   margin: 0;
@@ -10,7 +12,7 @@ body{
   align-items: center;
   width: 100%;
   height: 100vh;
-  /* background-color: #000; */
+  font-family: 'Roboto';
 }
 
 #app{
